# xdp-ng-experiments

xdp-ng/: Cargo.toml  README.md
xdp-ng-test-client/: .gitignore  Cargo.toml  README.md  cargo-sources.json  com.example.XdpNgDynamicLauncher.yml
xdp-ng-test-client/src/dynamic-launcher/: interface.rs  long_request.rs  main.rs
xdp-ng-test-client/src/xdp-ng-demo-app/: main.rs
xdp-ng/src/dynamic_launcher/: interface.rs  long_request.rs  main.rs  util.rs
